--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "skillswap-pro",
+  "name": "skilswap-pro",
   "version": "1.0.0",
+  "description": "SkillSwap PRO - neon version",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.0"
+    "express": "^4.21.0"
   }
 }
