--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "skilswap-pro",
   "version": "1.0.0",
-  "description": "SkillSwap PRO - neon version",
+  "description": "SkillSwap PRO - neon version updated",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
